--- a/ex_bar_ui/.gitignore
+++ b/ex_bar_ui/.gitignore
@@ -20,5 +20,9 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-ex_bar_ui-*.tar
+foo-*.tar
 
+
+# Ignore scripts marked as secret - usually passwords and such in config files
+*.secret.exs
+*.secrets.exs
